--- a/cabal.project.mustache
+++ b/cabal.project.mustache
@@ -1,9 +1,9 @@
 packages:
-  ./pa-prelude
-  ./pa-label
+{{#hackagePackages}}
+  ./{{name}}
+{{/hackagePackages}}
 
 -- These options should only be for local development with cabal, they will not be picked up by the nix build, on CI and in releases.
 package *
   -- This causes cabal to build modules on all cores, instead of just one.
   ghc-options: -j
-
